Agrego entidad tarifas para mostrar precios